# sol-chess

./: Anchor.toml  LICENSE  README.md  package-lock.json  package.json
client/: Cargo.toml
client/src/: main.rs  utils.rs
client/src/contexts/: deposit.rs  initialize_game.rs  initialize_user.rs  join_game.rs  leave_game.rs  mod.rs  move_piece.rs  resign.rs  withdraw.rs
idl/: sol_chess.json  sol_chess.ts
programs/sol-chess/: Cargo.toml
programs/sol-chess/src/: error.rs  lib.rs
programs/sol-chess/src/contexts/: clockwork_check_timer.rs  deposit.rs  initialize_game.rs  initialize_user.rs  join_game.rs  leave_game.rs  mod.rs  move_piece.rs  offer_draw.rs  resign.rs  withdraw.rs
programs/sol-chess/src/models/: board.rs  castling_right.rs  color.rs  draw_state.rs  game_config.rs  game_state.rs  mod.rs  piece.rs  square.rs  time_control.rs
programs/sol-chess/src/states/: game.rs  mod.rs  user.rs
tests/: sol-chess.ts
