[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sol-chess = { path = "../programs/sol-chess", features = ["no-entrypoint"], version = "0.1.0" }
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
solana-sdk = "1.10.29"
clockwork-client = "1.4.0"
rand = "0.8.5"

